@@ -7,7 +7,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CommerceServiceImpl implements CommerceService {
@@ -26,7 +25,6 @@ public class CommerceServiceImpl implements CommerceService {
     public List<CommerceDTO> getCommerces () {
         return this.commerceRepository.findAll()
                 .stream()
-                .map(commerceDTOUtil::toCommerceDTO)
-                .collect(Collectors.toList());
+                .map(commerceDTOUtil::toCommerceDTO).toList();
     }
 }
